Refactor controllers and data models. Add tests